# glfw-learn

./: .gitignore  CMakeLists.txt  camera.h  glad.c  main1.cpp  main2.cpp  shader.cpp  shader.h
glsl/: fragment_shader.glsl  fragment_shader_1.glsl  vertex_shader_1.glsl
project1/: .gitignore  CMakeLists.txt  camera.cpp  main.cpp  main1.cpp  shader.h  stb_image.cpp
project1/glsl/: fragment_shader_2.glsl  vertex_shader.glsl
project1/include/glad/: glad.h
project2/: camera.cpp  camera.h  main1.cpp
project2/glsl/: fragment_shader_1.glsl
project3/: CMakeLists.txt  camera.cpp  main1.cpp  model.cpp  model.h  shader.cpp  shader.h
project3/glsl/: fragment_shader_1.glsl  fragment_shader_3.glsl  vertex_shader_3.glsl
